turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:4: error: '=>' expected but '=' found.
      case i=90 => setColor(Color.red);
            ^DiskFourth:5: error: '=>' expected but '=' found.
      case i=180=> setColor(Color.yellow);
            ^DiskFourth:6: error: '=>' expected but '=' found.
      case i=270=> setColor(Color.magenta);
            ^