turtleart.diskfourth.DiskFourth.scala.code
override def run() {
  for(i<-1 to 360){
    i match{
      case i=90 => setColor(Color.red);
      case i=180=> setColor(Color.yellow);
      case i=270=> setColor(Color.magenta);
    }
  }
}